--- a/_config.yml
+++ b/_config.yml
@@ -276,6 +276,9 @@ defaults:
       comments: true
       share: true
       related: true
+      category:
+      tags:
+      toc: true
 
   # _pages
   - scope:
