--- a/_config.yml
+++ b/_config.yml
@@ -279,6 +279,8 @@ defaults:
       category:
       tags:
       toc: true
+      toc_sticky: true
+      toc_label: "목차"
 
   # _pages
   - scope:
