--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ words_per_minute         : 200 # 해당 포스트 읽는데 걸리는 시간을 
 
 # 댓글 관련 부분
 comments:
-  provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
-  disqus:
-    shortname            : xengom.com # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
-  discourse:
-    server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
+  repository: "xengom/blog-comment"
+  provider: "utterances" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
+  utterances:
+    theme: "github-light" #"github-dark"
+    issue_term: "title"
   facebook:
     # https://developers.facebook.com/docs/plugins/comments
     appid                :
