--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,13 @@ name                     : "DeC" # 맨 하단 이름 찍히는 영역
 description              : "Studying Codes" # Meta 태그에 들어가는 영역
 url                      : "https://mognex.com" # GitBlog 호스트 주소
 baseurl                  :
-repository: "xengom/blog-comment"
+repository               : "xengom/blog-comment"
 teaser                   : "/assets/images/icon.jpg" # 홈페이지 기본 티져 이미지
 logo                     : "/assets/images/1.jpg"# 타이틀 옆에 작게 들어갈 이미지.
 masthead_title           : "DeCoding" # 홈페이지 최 상탄에 들어갈 타이틀
 breadcrumbs              : true # 브래드크럼 사용 여부 true, false (default) , _data/ui-text.yml에 다국어 지원 가능합니다.
 words_per_minute         : 200 # 해당 포스트 읽는데 걸리는 시간을 계산하기 위해 대락 분당 읽는 수가 몇글자가 될지 적는 공간.
+future                   : true
 
 # 댓글 관련 부분
 comments:
