--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ analytics:
 author:
   name             : "DeC"
   avatar           : "/assets/images/Dayseekr2.jpg" # 프로필 이미지
-  bio              : "Steady Coder <br> Try until become a developer."
+  bio              : "Web developer <br> working 2 years at samsung electronics"
   location         : "Hwaseong, Korea"
   email            : "xengom@gmail.com"
   links:
